# robot_simple

devel/: .catkin
devel/lib/pkgconfig/: robot_control.pc  robot_controller.pc  robot_description.pc  robot_gazebo.pc  robot_rviz.pc
devel/share/robot_control/cmake/: robot_controlConfig.cmake
devel/share/robot_controller/cmake/: robot_controllerConfig.cmake
devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
devel/share/robot_gazebo/cmake/: robot_gazeboConfig.cmake
devel/share/robot_rviz/cmake/: robot_rvizConfig.cmake
src/robot_core/robot_controller/: CMakeLists.txt  package.xml  robot_controller_plugin.xml
src/robot_core/robot_controller/include/robot_controller/: robot_controller.h
src/robot_core/robot_controller/src/: robot_controller.cpp
src/robot_sim/robot_control/config/: robot_control.yaml
src/robot_sim/robot_control/launch/: spawn_control.launch
src/robot_sim/robot_description/: package.xml
src/robot_sim/robot_description/launch/: description.launch
src/robot_sim/robot_description/urdf/: robot.xacro
src/robot_sim/robot_description/urdf/elements/: wheel.xacro
src/robot_sim/robot_description/urdf/extras/: components.xacro  inertias.xacro  variables.xacro
src/robot_sim/robot_gazebo/: CMakeLists.txt
src/robot_sim/robot_gazebo/launch/: robot_gazebo.launch  spawn_robot.launch  spawn_world.launch
src/robot_sim/robot_rviz/: CMakeLists.txt  package.xml
src/robot_sim/robot_rviz/launch/: view_model.launch  view_robot.launch
src/robot_sim/robot_rviz/rviz/: view_model.rviz
